Bug 354189 - Cannot copy text which contains a # symbol.
Summary: Cannot copy text which contains a # symbol.
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: ircview (other bugs)
Version First Reported In: 1.5.1
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: argonel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-21 21:51 UTC by Christoph Feck
Modified: 2017-08-18 07:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2015-10-21 21:51:07 UTC
Someone just wrote:

<User> hi, someone here, who can have a look on Review #125416 of the KDE Review Board. The issue needs to be commited.

Being lazy, I tried to copy the review number to the clipboard using the context menu.

This did not work. Even if I do not select the # character, i.e. only the "125416" part (excluding or including trailing text), the context menu still only suggests to join this channel or lists its users.
Comment 1 argonel 2017-08-18 07:50:41 UTC
Git commit 3b33a4e2e2fe5a03ed914815f96168524e9b15ec by Eli MacKenzie.
Committed on 11/08/2017 at 06:01.
Pushed by argonel into branch '1.7'.

Add a copy action to the channel-name-in-text context menu

M  +1    -1    src/commit.h
M  +10   -3    src/viewer/irccontextmenus.cpp

https://commits.kde.org/konversation/3b33a4e2e2fe5a03ed914815f96168524e9b15ec