Add a copy action to the channel-name-in-text context menu

BUG:354189